# CS-UBB

./: .gitignore  README.md
Others/: Structura anului universitar LR_2023_2024.doc
Others/Competitive/: Metrici.csv
Others/Competitive/Catalyst/: CMakeLists.txt  file2  main.cpp
Others/Competitive/Catalysts/level1/: level1_4.in  level1_example.in
Others/Competitive/Catalysts/src/: Main.java
Others/Competitive/level1/: level1-0.in  level1-1.in  level1-2.in  level1-3.in
Others/Competitive/level2/: level2-0.in  level2-1.in  level2-2.in  level2-3.in
Others/Competitive/level3/: level3-0.in  level3-01.in  level3-02.in  level3-03.in  level3-04.in  level3-1.in  level3-2.in  level3-3.in  level3-4.in  level3-5.in  level3-6.in  level3-7.in
Others/Competitive/src/: Main.java
Others/Competitive/testHello/: helloworld  helloworld.cpp
Others/Jobs applications/: CoverLetter.docx
Others/Jobs applications/Cloudflight/: Cover Letter.docx
Others/Sandbox/: practice.lsp  practice.pl  practice2.lsp  practice2.pl  practice3.lsp  practice3.pl  practice4.pl  practice5.pl  practice6.pl  prep_practice.lsp
Year01/1st semester/ASC/: Lab12.docx
Year01/1st semester/ASC/1+2/: Whiteboard_29_septembrie_6_octombrie.docx
Year01/1st semester/ASC/10/: Whiteboard_24_noiembrie.docx
Year01/1st semester/ASC/11/: Whiteboard_7_8_decembrie.docx
Year01/1st semester/ASC/3/: Seminar_2.docx  Whiteboard_13_oct.docx
Year01/1st semester/ASC/4/: Lab4.docx  Whiteboard_20_oct.docx
Year01/1st semester/ASC/5/: Lab5.docx  v2_Whiteboard_27_octombrie.docx
Year01/1st semester/ASC/6/: Lab6.docx  Whiteboard_3_noiembrie.docx
Year01/1st semester/ASC/7/: Whiteboard_10_Nov.docx
Year01/1st semester/ASC/8/: Lab8.docx  (+1 more)
Year01/2nd semester/Data Structures/Lab/Lab01/: CMakeLists.txt  IteratorVectorDinamic.h  VectorDinamic.cpp  VectorDinamic.h
Year01/2nd semester/Data Structures/Lab/Lab01/Teste/: TestScurt.cpp
Year01/2nd semester/Data Structures/Lab/Lab03/: CMakeLists.txt  Lista.cpp  Lista.h  interfata.txt
Year01/2nd semester/Data Structures/Lab/Lab03/Teste/: TestExtins.cpp
Year01/2nd semester/Data Structures/Lab/Lab04/: CMakeLists.txt  Dictionar.h  IteratorDictionar.cpp
Year01/2nd semester/Data Structures/Lab/Lab04/Teste/: TestExtins.cpp
Year01/2nd semester/Data Structures/Lab/Lab05/: CMakeLists.txt
Year01/2nd semester/Data Structures/Lab/Lab05/Proiect C++/: MDO.cpp
Year01/2nd semester/OOP/Lab/ExamenPractic/: CMakeLists.txt  UI.cpp  UI.h  domain.cpp  domain.h  main.cpp  observer.h  repo.cpp  repo.h  service.cpp  service.h
Year01/2nd semester/OOP/Lab/Lab10_11/: CMakeLists.txt  MyListModel.h  UI.cpp  UI.h  domain.cpp  domain.h  main.cpp  observer.h  recipe_class.cpp  recipe_class.h  repo.cpp  repo.h  service.cpp  service.h  undo_act.h
Year01/2nd semester/SDA/Lab/Lab02/: CMakeLists.txt  IteratorMD.cpp  IteratorMD.h  MD.h
Year01/2nd semester/SDA/Lab/Lab02/Teste/: TestExtins.cpp
Year02/1st semester/Pedagogie/: Cubul de învățare.docx  Plan de lectie - Introducere in teoria grafurilor.docx  TMI si TME- original.ppt
Year02/1st semester/Retele/: Retele de calculatoare.docx
Year03/1st semester/Pedagogie/: Ghid portofoliu Pract1_Niv_I.docx  Tabel asistențe.docx  Tabel planificare asistențe.docx
Year03/1st semester/Protocoale/: Transcript.docx  Video Streaming Applications.pptx
Year03/2nd semester/NSA/: Linux Services.docx  PHP & MySQL.docx
Year03/2nd semester/Pedagogie/: Asistente.docx  Managementul clasei de elevi.docx  Planificare asistente.docx  Prezentare pedagogie - Tema de casa.docx  pedagogie-oglinzi.docx  pedagogie-predare.docx
Year03/2nd semester/VVSS/: Cuvinte Crossword.docx
(+2278 files in other folders)
